--- a/app/src/main/res/layout/activity_tag_view.xml
+++ b/app/src/main/res/layout/activity_tag_view.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <FrameLayout
+    <mchenys.net.csdn.blog.testmoden20.test2.TagLayout
+        android:id="@+id/ll_layout"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="#f3f3f3">
+        android:layout_height="300dp"
+        android:orientation="vertical">
 
-        <mchenys.net.csdn.blog.testmoden20.test2.SingleTagView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </FrameLayout>
-</LinearLayout>
+    </mchenys.net.csdn.blog.testmoden20.test2.TagLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:onClick="onSaveTo"
+        android:text="saveTo"
+        android:textAllCaps="false"/>
+
+</FrameLayout>
