--- a/app/src/main/res/layout/activity_record_view.xml
+++ b/app/src/main/res/layout/activity_record_view.xml
@@ -7,10 +7,16 @@
 
     <mchenys.net.csdn.blog.testmoden20.test7.RecordView
         android:id="@+id/recordView"
-        android:layout_width="240dp"
-        android:layout_height="320dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/switchLayout"
         android:layout_centerHorizontal="true"/>
-
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_alignBottom="@+id/recordView"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
     <TextView
         android:id="@+id/tv_time"
         android:layout_width="wrap_content"
@@ -18,58 +24,63 @@
         android:textColor="@color/colorAccent"
         android:textSize="20sp"/>
 
+    <ImageView
+        android:id="@+id/iv_flash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_flash_auto"/>
+
+    <ImageView
+        android:id="@+id/btn_switch_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_camera_top_bar_sw_camera"/>
+
     <mchenys.net.csdn.blog.testmoden20.test7.SwitchLayout
         android:id="@+id/switchLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/ll_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/rl_bottom"
+        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="视频视频视频视频"
+            android:text="视频"
             android:textColor="#fff"
             android:textSize="22sp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="拍照拍"
+            android:text="拍照"
             android:textColor="#fff"
             android:textSize="22sp"/>
     </mchenys.net.csdn.blog.testmoden20.test7.SwitchLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_bottom"
+    <RelativeLayout
+        android:id="@+id/rl_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
+        android:layout_marginTop="10dp"
+        android:gravity="center">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="takePhoto"
-            android:text="拍照"/>
+        <ImageButton
+            android:id="@+id/btn_shutter_record"
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:background="@drawable/btn_shutter_record"
+            android:scaleType="fitXY"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="startRecord"
-            android:text="录像"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="switchCamera"
-            android:text="切换摄像头"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="preView"
-            android:text="预览"/>
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/btn_shutter_camera"
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:background="@drawable/btn_shutter_camera"
+            android:scaleType="fitXY"/>
+    </RelativeLayout>
 
 </RelativeLayout>
